ResourceErrorBase::compare doesn’t call the right platformCompare override https://bugs.webkit.org/show_bug.cgi?id=135240

Reviewed by Alexey Proskuryakov.

* platform/network/ResourceErrorBase.cpp:
(WebCore::ResourceErrorBase::compare): Changed to call ResourceError::platformCompare.
* platform/network/cf/ResourceError.h: Made platformCompare public.
* platform/network/soup/ResourceError.h: Ditto.



Canonical link: https://commits.webkit.org/153186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171600 268f45cc-cd09-0410-ab3c-d52691b4dbfc